--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@carbonext/react-oidc-context",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "description": "OpenID Connect & OAuth2 authentication using react context api as state management | Carbonext",
   "repository": {
     "type": "git",
