--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18.x
           cache: npm
 
       - name: Cache incremental builds
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             lib/
@@ -30,18 +30,24 @@ jobs:
       - run: npm ci
       - run: npm pack --dry-run
 
+      - name: Example/Parcel builds
+        run: |
+          npm ci
+          npm run build
+        working-directory: example
+
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18.x
           cache: npm
 
       - name: Cache incremental builds
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             .eslintcache
@@ -55,7 +61,7 @@ jobs:
       - run: npm run lint
       - run: npm test
 
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v3
         with:
           files: ./coverage/lcov.info
           flags: unittests
