--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea
+
 # build artifacts
 *.tsbuildinfo
 lib/
@@ -5,11 +7,11 @@ lib/
 
 **/dist/*
 /dist/esm/*
-!/dist/esm/package.json
 
 # caches
 .eslintcache
 .cache
+example/.parcel-cache
 
 # dependencies
 node_modules/
