--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@carbonext/react-oidc-context",
-  "version": "1.0.1",
-  "description": "OpenID Connect & OAuth2 authentication using react context api as state management",
+  "version": "2.0.0",
+  "description": "OpenID Connect & OAuth2 authentication using react context api as state management | Carbonext",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com:carbonext-tech/react-oidc-context.git"
+    "url": "git+https://github.com/carbonext-tech/react-oidc-context.git"
   },
   "homepage": "https://github.com/carbonext-tech/react-oidc-context#readme",
   "license": "MIT",
@@ -12,6 +12,7 @@
   "types": "dist/types/react-oidc-context.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/types/react-oidc-context.d.ts",
       "import": "./dist/esm/react-oidc-context.js",
       "require": "./dist/umd/react-oidc-context.js"
     },
@@ -36,38 +37,47 @@
     "prepack": "npm run build",
     "test": "tsc -p test/tsconfig.json && jest",
     "lint": "eslint --max-warnings=0 --cache .",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "peerDependencies": {
-    "@carbonext/oidc-client-ts": "^1.0.0",
-    "react": ">=16.8.0"
+    "@carbonext/oidc-client-ts": "^2.0.1",
+    "react": ">=16.14.0"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.18.10",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/react-hooks": "^7.0.0",
-    "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "esbuild": "^0.14.1",
-    "eslint": "^8.4.1",
-    "eslint-plugin-testing-library": "^5.0.0",
-    "husky": "^7.0.2",
-    "jest": "^27.2.0",
-    "jest-mock": "^27.4.2",
-    "lint-staged": "^12.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
-    "ts-jest": "^27.0.5",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4",
+    "@eslint/compat": "^1.2.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
+    "@microsoft/api-extractor": "^7.49.1",
+    "@stylistic/eslint-plugin": "^2.13.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-test-renderer": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "esbuild": "^0.25.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-testing-library": "^7.1.1",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "lint-staged": "^15.2.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-test-renderer": "^18.3.1",
+    "ts-jest": "^29.2.5",
+    "tslib": "^2.8.1",
+    "typescript": "~5.8.2",
     "yn": "^5.0.0"
   },
   "engines": {
-    "node": ">=12.13.0"
+    "node": ">=18"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
