--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["src", "types"],
   "compilerOptions": {
     "target": "ES2019",
     "module": "ESNext",
@@ -23,10 +22,11 @@
     // error out if import and file system have a casing mismatch. Recommended by TS
     "forceConsistentCasingInFileNames": true,
     // ensure type imports are side-effect free by enforcing that `import type` is used
-    "importsNotUsedAsValues": "error",
+    "verbatimModuleSyntax": true,
     // prevent the use features that do not work with isolated transpilation
     "isolatedModules": true,
     // transpile JSX to React.createElement
-    "jsx": "react",
-  }
+    "jsx": "react"
+  },
+  "include": ["src", "types"]
 }
